# rivals-mod-parser

./: .gitattributes  .gitignore  Cargo.toml  go.mod  main.go
bindings/mod-parser-rs/: Cargo.toml  build.rs
bindings/mod-parser-rs/src/: ffi.rs  lib.rs
scripts/: build_go.ps1  clean.ps1
